objects/Project_Task__c.object
<CustomObject>
    <fields>
        <fullName>Active_Critical__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Flags the current &apos;Critical Path&apos; task on a Project. Used in Project Dashboard and for reporting.</description>
        <formula>AND(OR(TEXT(Status__c) = &apos;In Progress&apos; , TEXT(Status__c) = &apos;Needs Rework&apos;, TEXT(Status__c) = &apos;Pending Approval&apos;,TEXT(Status__c) = &apos;Hold&apos;), Critical_Path__c == TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apex_Updated__c</fullName>
        <description>Used in the backend to identify records that have been modified via apex for exclusion in validation rules</description>
        <label>Apex Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
The Assigned To User is the person responsible for the completion of this task. They will receive all notifications concerning this task. Assigned To field can be modified manually or programmatically based on Role Assignment.</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Residential Installation Project Management
Explanation used for Sub Tasks</description>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Critical_Path__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Manually assigned on the template and propagated down to clone tasks. Critical path tasks are used in overall project SLA calculations. When a critical path task is completed, the next task in Order will automatically be started.</description>
        <label>Critical Path</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Task description. Populated manually.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Manually set on template, propagated down to clone tasks. If checked, validation will run on status = complete to confirm that all related Document records have related Attachments.</description>
        <label>Document Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Manually populated on Ad Hoc tasks to alert user of task due date. Used in Chatter notifications.</description>
        <inlineHelpText>Optional. Define a Due Date for task completion.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elapsed_DateTime__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Populated programmatically. Used in the SLA Aging formula.</description>
        <label>Elapsed DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_DateTime__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Populated programmatically. DateTime that task was completed. Used in SLA Aging formula.</description>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalation_Category__c</fullName>
        <description>Residential Installation Management
Describes the escalation category.</description>
        <label>Escalation Category</label>
        <picklist>
            <picklistValues>
                <fullName>Missing Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnection Complexity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Complexity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Job Specifics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Stamping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult AHJS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escalation_Sub_Category__c</fullName>
        <description>Residential Installation Project Management
Dependent picklist based on escalation category</description>
        <label>Escalation Sub-Category</label>
        <picklist>
            <controllingField>Escalation_Category__c</controllingField>
            <picklistValues>
                <fullName>Missing Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Site Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPU Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCB Downsize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conductor Taps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Panel POI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Un-Labeled MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stab-Lok Panels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Phase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Mod Voltage Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MLO Panels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quad/Twin Breakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over-Spanned Rafters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Roofs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Standard Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaulted Ceiling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Setback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trenching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Strings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre Sales Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter Sizing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverse Tilt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHJ Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHJ Corrections</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_am_Owner__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Formula that represents whether the logged in user is the Assigned To user for this task. Used in Project Dashboard, list views, reports.</description>
        <formula>IF(Assigned_To__c = $User.Id, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I am Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Populated manually on template or ad hoc.</description>
        <label>Milestone</label>
        <picklist>
            <picklistValues>
                <fullName>Project Intake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Closeout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Populated manually on template. Represents the order that tasks should be completed. When a critical path task is status = compelete, next task in order will be started automatically.</description>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Formula to represent if SLA Days Aging is greater than SLA Days.</description>
        <formula>IF(AND(RecordType.Name = &apos;Ad Hoc&apos;, TODAY() &gt; Due_Date__c), TRUE, IF(SLA_Days_Aging__c &gt;  SLA_Days__c, TRUE, FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Residential Installation
This field identifies the parent task for a sub task</description>
        <label>Parent Task</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <errorMessage>Parent Task must be Record Type &apos;Ad Hoc&apos; or &apos;Project Task&apos;</errorMessage>
            <filterItems>
                <field>Project_Task__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Ad Hoc</value>
            </filterItems>
            <filterItems>
                <field>Project_Task__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Project Task</value>
            </filterItems>
            <filterItems>
                <field>Project_Task__c.Residential_Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Residential_Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Sub Tasks</relationshipLabel>
        <relationshipName>Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Priority__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Populated programmatically based on Project Priority for all non &apos;Ad Hoc&apos; tasks. &apos;Ad Hoc&apos; task priority is set manually .</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fast-tracked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Project Tasks (Project Task)</relationshipLabel>
        <relationshipName>Project_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_Project_Fields__c</fullName>
        <description>Residential Project Mgmt 
Priti Rastogi 
On a task template you can select the project fields that need to be populated before that task can be completed</description>
        <inlineHelpText>Required Project Fields are data fields on the project record that are required inputs for task completion. If one of these fields is associated with a project task, the system will validate that the field is populated before allowing task completion.</inlineHelpText>
        <label>Required Project Fields</label>
        <picklist>
            <picklistValues>
                <fullName>AHJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled Site Survey Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowner Scheduled Installation Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Level Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Service Panel Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Service Panel Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumption Monitoring Compatible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Breaker Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Breaker Rating (Amps)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Thermostat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowner Utility Meter No.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowner Utility Account No.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can solar breaker be installed in MSP?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder WO #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder WO Date of Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder WO $ Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actual Time (Hours)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracking Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escrow Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Install Promised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rough Wire Promised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trim Promised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTA Bldg Inspection Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness Test date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials Ship-to location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested Delivery Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Rebate (Expected)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Residential_Project__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Project master.</description>
        <label>Residential Project</label>
        <referenceTo>Residential_Project__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rework_Category__c</fullName>
        <description>Residential Installation Project Management
This field gives an explanation category for why a task had to be reworked</description>
        <label>Rework Category</label>
        <picklist>
            <picklistValues>
                <fullName>Incomplete Site Survey</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_Assignment__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Assigned manually at template, propagated down to clone tasks. Role Assignment connects the Assigned To user to related Project Team Member with matching role. Assigned To user will be automatically updated if Project Team Member with matching role is assigned.</description>
        <label>Role Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>Commissioning Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crew Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Support Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer of Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Superintendent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Products Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Partner Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnection Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Support Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Runner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Design Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate and Interconnection Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Surveyor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Sales Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 1 Design</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLA_Days_Aging__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
SLA clock for task completion.</description>
        <formula>IF(Status_Type__c = &apos;Open&apos;, 
   now() - Elapsed_DateTime__c + Time_Differential__c, 
   IF(Status_Type__c = &apos;Hold&apos;, 
       Time_Differential__c, 
       IF(Status_Type__c = &apos;Completed&apos;,
           End_DateTime__c - Elapsed_DateTime__c +  Time_Differential__c , 
           NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Days Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Days__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Populated manually at template level, propagated down to clones. Defined the target timeline for task completion.</description>
        <label>SLA Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Flag__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Visual indicator if task is overdue. Based on SLA Days vs. SLA Days Aging</description>
        <formula>IF(  OR(ISBLANK(SLA_Days__c),ISBLANK(SLA_Days_Aging__c)), &apos;&apos;, IF(SLA_Days_Aging__c &lt; SLA_Days__c, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 20, 20), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 20, 20)))</formula>
        <label>SLA Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Populated programmatically at time of task start. Used in SLA Days Aging formula</description>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Type__c</fullName>
        <description>Residential Project Mgmt
This fields groups the different status types to be used in code so they are easier to manage</description>
        <formula>IF(TEXT(Status__c) = &apos;Not Started&apos;, &apos;New&apos;, IF(OR(TEXT(Status__c) = &apos;Pending Approval&apos;, TEXT(Status__c) = &apos;In Progress&apos;, TEXT(Status__c) = &apos;Needs Rework&apos;), &apos;Open&apos;, IF(OR(TEXT(Status__c) = &apos;Completed&apos;, TEXT(Status__c) = &apos;Approved&apos;), &apos;Completed&apos;, IF(TEXT(Status__c) = &apos;Cancelled&apos;, &apos;Cancelled&apos;, &apos;Hold&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Statuses of task, based on task type. Key data point for task automation and reporting. ** Edit with Caution **</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Type_Name__c</fullName>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Populated manually on template, propagated down. Task Type Name is the Name of the Template task without the Account name prefix. Used in Project Dashboard and to group tasks for analytics.</description>
        <label>Task Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <description>Residential Installation Project Management
Determines the type of task this is. Used for validation and status picklist</description>
        <label>Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Hoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Template_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Populated programmatically. Lookup to the Task Template Parent. This field is used to keep templates in sync with their clones.</description>
        <label>Template Task</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Differential__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Populated programmatically. Used in the SLA Aging formula. 
Used to track time through hold periods.</description>
        <label>Time Differential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_from_Project_Start__c</fullName>
        <description>If task is finished, this field will represent the time between the start of the project and the task completion date, otherwise it will be blank.</description>
        <formula>IF(NOT(ISNULL(End_DateTime__c)), End_DateTime__c - Residential_Project__r.CreatedDate, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time from Project Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Times_Repeated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
Populated programmatically. Used to count times task has gone from a completed status to an active status.</description>
        <label>Times Repeated</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <recordTypes>
        <fullName>Ad_Hoc</fullName>
        <active>true</active>
        <description>Used to create one off tasks on residential projects. Not to be used in project templates.</description>
        <label>Ad Hoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Task</fullName>
        <active>true</active>
        <description>Used on all project tasks that come from a template</description>
        <label>Project Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Task</fullName>
        <active>true</active>
        <description>A stripped down task layout used for sub tasks of parents</description>
        <label>Sub Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Task_Template</fullName>
        <active>true</active>
        <description>Used for all tasks in a project template.</description>
        <label>Task Template</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Active_to_Not_Started_Validation</fullName>
        <active>true</active>
        <description>Once a task has been started, it cannot go back into a &apos;Not Started&apos; status.</description>
        <errorConditionFormula>AND( $User.ByPassValidation__c = FALSE, Status_Type__c == &apos;New&apos; , Priorvalue(Status_Type__c) != &apos;New&apos;, Apex_Updated__c == PRIORVALUE(Apex_Updated__c))</errorConditionFormula>
        <errorMessage>Once a task is started it cannot go back into &apos;Not Started&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Completed_to_In_Progress_Validation</fullName>
        <active>true</active>
        <description>Once a task is completed it cannot go back into a &apos;In Progress&apos; status.</description>
        <errorConditionFormula>AND( $User.ByPassValidation__c = FALSE, TEXT(Status__c) = &apos;In Progress&apos; , ISPICKVAL(PRIORVALUE(Status__c), &apos;Completed&apos;))</errorConditionFormula>
        <errorMessage>Once a task is &apos;Completed&apos; it cannot go back to &apos;In Progress&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Critical_Path_Order_Within_Range</fullName>
        <active>true</active>
        <description>The Order of a critical path task must not be below 1 or above the highest existing order number +1</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Task_Template&apos;, Critical_Path__c = TRUE, OR(Order__c &lt; 1, Order__c &gt; (Residential_Project__r.Max_Order__c +1)))</errorConditionFormula>
        <errorMessage>The order of this task is invalid. It must not be lower than 1 or above the highest existing order +1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Critical_Path_and_Order</fullName>
        <active>true</active>
        <description>The critical path checkbox cannot be changed in the same action as order</description>
        <errorConditionFormula>AND(PRIORVALUE(Critical_Path__c) != Critical_Path__c, PRIORVALUE(Order__c) != Order__c)</errorConditionFormula>
        <errorMessage>Critical Path and Order cannot be changed in the same action. Please update one at a time.</errorMessage>
    </validationRules>
</CustomObject>